--- a/content/post/2020-11-23-remember-resampling-techniques-change-the-base-rates-of-your-predictions.Rmd
+++ b/content/post/2020-11-23-remember-resampling-techniques-change-the-base-rates-of-your-predictions.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Just Making Sure You Know, Downsampling Changes the Base Rates of Your Predictions
+title: Undersampling Changes the Base Rates of Your Predictions
 author: Bryan Shalloway
 date: '2020-11-23'
 categories:
@@ -27,11 +27,11 @@ slug: remember-resampling-techniques-change-the-base-rates-of-your-predictions
 <!--     }); -->
 <!-- </script> -->
 
-**TLDR:** In classification problems, over and under sampling techniques shift the distribution of predicted probabilities towards the minority class. If your problem requires accurate probabilities you will need to adjust your predictions in some way during post-processing (or at another step) to account for this^[I expect the audience for this post may be rather limited.].
+**TLDR:** In classification problems, under and over sampling^[In the title I just mention Undersamping for brevities sake. Upsampling and downsampling are synonyms you may hear as well] techniques shift the distribution of predicted probabilities towards the minority class. If your problem requires accurate probabilities you will need to adjust your predictions in some way during post-processing (or at another step) to account for this^[I expect the audience for this post may be rather limited.].
 
-People new to predictive modeling may rush into using sampling procedures without understanding what these procedures are doing. They then sometimes get confused when their predictions appear way off (from those that would be expected according to the base rates in their data). I decided to write this vignette to briefly walk through (explicitly) an example of the implications of under or over sampling procedures on the base rates of predictions[^1]. 
+People new to predictive modeling may rush into using sampling procedures without understanding what these procedures are doing. They then sometimes get confused when their predictions appear way off (from those that would be expected according to the base rates in their data). I decided to write this vignette to briefly walk through an example of the implications of under or over sampling procedures on the base rates of predictions[^1]. 
 
-My examples will appear obvious to individuals with experience in predictive modeling with imbalanced classes. The code is pulled largely from a few emails I sent in early to mid 2018^[before I started using [tidymodels](https://www.tidymodels.org/)] to individuals new to data science. Like my other posts, you can see the source code on [github](https://github.com/brshallo/brshallo).
+My examples will appear obvious to individuals with experience in predictive modeling with imbalanced classes. The code is pulled largely from a few emails I sent in early to mid 2018^[before I started using [tidymodels](https://www.tidymodels.org/)] to individuals new to data science. Like my other posts, you can view the source code on [github](https://github.com/brshallo/brshallo).
 
 Note that this post is not about *why* you might want to use resampling procedures^[or any of a myriad of topics related to this.], it is meant *only* to demonstrate that such procedures change the base rates of your predictions (unless adjusted for).
 
@@ -162,7 +162,9 @@ test_with_preds %>%
   facet_wrap(~model, ncol = 1)
 ```
 
-The predicted probabilities for the model built with the down-sampled 50-50 dataset are much higher than those built with the original 5-95 dataset. The predictions from the down-sampled model are not accurate predicted probabilities in their current form and would need to be rescaled to reflect the *actual* underlying distribution of positive cases associated with the given inputs.
+The predicted probabilities for the model built with the down-sampled 50-50 dataset are much higher than those built with the original 5-95 dataset. If picking a decision threshold for the predictions, the model built from the undersampled dataset would have far more predictions of `TRUE` compared to the rate of `TRUE`s from the model built from the original training dataset^[Of course you could just use different decision thresholds for the predictions as well.]. 
+
+In their current form the predictions from the down-sampled model are not accurate predicted probabilities. For many applications they would need to be rescaled to reflect the *actual* underlying distribution of positive cases associated with the given inputs.
 
 ## Re-scale Predictions to Predicted Probabilities
 
